syntax = "proto3";
package graft.common.v1;

import "google/protobuf/timestamp.proto";

enum GraftErrCode {
  GRAFT_ERR_CODE_UNSPECIFIED = 0;

  // Client error codes
  GRAFT_ERR_CODE_CLIENT = 1;
  GRAFT_ERR_CODE_SNAPSHOT_MISSING = 2;
  GRAFT_ERR_CODE_COMMIT_REJECTED = 3;
  GRAFT_ERR_CODE_UNAUTHORIZED = 4;

  // Server error codes
  GRAFT_ERR_CODE_SERVER = 100;
  GRAFT_ERR_CODE_SERVICE_UNAVAILABLE = 101;
}

message GraftErr {
  GraftErrCode code = 1;
  string message = 2;
}

message SegmentInfo {
  bytes sid = 1;
  bytes graft = 2;
}

// A snapshot contains the metadata of a volume at a given LSN.
message Snapshot {
  bytes vid = 1;
  bytes cid = 2;
  uint64 lsn = 3;
  uint64 checkpoint_lsn = 4;
  uint32 page_count = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message Commit {
  Snapshot snapshot = 1;
  repeated SegmentInfo segments = 2;
}

message LsnRange {
  uint64 inclusive_start = 1;
  optional uint64 inclusive_end = 2;
}
